tests-integration/fixtures/checking/278_prim_int_compare_concrete_seed/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
assertGreater ::
  forall (l :: Int) (r :: Int).
    Compare (l :: Int) (r :: Int) GT => Proxy @(Row Int) ( left :: (l :: Int), right :: (r :: Int) )
assertLesser ::
  forall (l :: Int) (r :: Int).
    Compare (l :: Int) (r :: Int) LT => Proxy @(Row Int) ( left :: (l :: Int), right :: (r :: Int) )
weakenZeroToNegOne ::
  forall (h :: Int).
    Compare (h :: Int) 0 GT => Proxy @(Row Int) ( left :: (h :: Int), right :: (-1) )
weakenZeroToNegTwo ::
  forall (h :: Int).
    Compare (h :: Int) 0 GT => Proxy @(Row Int) ( left :: (h :: Int), right :: (-2) )
weakenZeroLT ::
  forall (h :: Int). Compare (h :: Int) 0 LT => Proxy @(Row Int) ( left :: (h :: Int), right :: 1 )
chainAbstractAndConcrete ::
  forall (h :: Int) (k :: Int).
    Compare (h :: Int) (k :: Int) GT =>
    Compare (k :: Int) 5 GT =>
    Proxy @(Row Int) ( left :: (h :: Int), right :: 4 )

Types

Diagnostics
error[NoInstanceFound]: No instance found for: Compare (h :: Int) (-1) GT
  --> 14:1..14:85
   |
14 | weakenZeroToNegOne :: forall h. Compare h 0 GT => Proxy ( left :: h, right :: (-1) )
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Compare (h :: Int) (-2) GT
  --> 18:1..18:85
   |
18 | weakenZeroToNegTwo :: forall h. Compare h 0 GT => Proxy ( left :: h, right :: (-2) )
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Compare (h :: Int) 1 LT
  --> 22:1..22:76
   |
22 | weakenZeroLT :: forall h. Compare h 0 LT => Proxy ( left :: h, right :: 1 )
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Compare (h :: Int) 4 GT
  --> 26:1..30:37
   |
26 | chainAbstractAndConcrete
   | ^~~~~~~~~~~~~~~~~~~~~~~~
